# Extend-UMLS-KG

./: Cargo.toml  README.md  flake.nix
nix/: package.nix
src/: main.rs
src/cli/: completion.rs  cui_embedding.rs  mod.rs
src/subcommand/: mod.rs
src/subcommand/cui_embedding/: README.md  mod.rs
