[package]
name = "xumlskg"
version = "0.1.0"
edition = "2024"
authors = [ "c2fc2f <contact@c2fc2f.com>" ]
description = "A multitool for extending UMLS knowledge graphs (CSV-based for Neo4J) with additional nodes, relationships, and external metadata"
readme = "README.md"
repository = "https://github.com/c2fc2f/Extend-UMLS-KG"
license = "MIT"
keywords = [
  "umls",
  "knowledge-graph", 
  "neo4j", 
]
categories = [
  "command-line-utilities", 
  "database"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[dependencies]
clap = { version = "4", features = [ "derive", "env" ] }
clap_complete = "4"
clap-verbosity-flag = {
  version = "3",
  default-features = false,
  features = [ "tracing" ]
}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rig-core = "0.39"
neo4rs = "0.8"
rustls = { version = "0.23", features = ["ring"] }
anyhow = "1.0.102"

[build-dependencies]
clap = { version = "4", features = [ "derive", "env", "string" ] }
clap_mangen = "0.3"
clap_complete = "4"
clap-verbosity-flag = {
  version = "3",
  default-features = false,
  features = [ "tracing" ]
}

